--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ gitment_oauth_secret: 4a9d2b148e7971c2201ad12131ce8bf8159ccd2e
 #disqus_shortname: 
 
 about: 
-  banner: ../images/about-banner.jpg
-  avatar: ../images/about-avatar.jpg
+  banner: ../images/about/banner.jpg
+  avatar: ../images/about/avatar.jpg
   description: "She's always so pea."
   #weibo_username: ppxu
   #twitter_username: ppxu
